--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="min-h-screen flex flex-col p-4 md:p-6 lg:p-8">
         
         <header class="mb-6">
-            <h1 class="text-2xl lg:text-3xl font-bold text-white">Advanced Forecasting Dashboard</h1>
+            <h1 class="text-2xl lg:text-3xl font-bold text-white">Data Forecasting Dashboard</h1>
             <p class="text-sm lg:text-base text-gray-400">Project future trends using robust statistical and regression models.</p>
         </header>
 
@@ -341,3 +341,4 @@
 </body>
 
 </html>
+
